WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83166
Adjust max bisection search iterations for TouchpadFlingGestureCurve.
https://bugs.webkit.org/show_bug.cgi?id=83166
Summary
Adjust max bisection search iterations for TouchpadFlingGestureCurve.
W. James MacLean
Reported
2012-04-04 08:13:36 PDT
Adjust max bisection search iterations for TouchpadFlingGestureCurve.
Attachments
Patch
(1.62 KB, patch)
2012-04-04 08:14 PDT
,
W. James MacLean
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
W. James MacLean
Comment 1
2012-04-04 08:14:52 PDT
Created
attachment 135596
[details]
Patch
W. James MacLean
Comment 2
2012-04-04 08:16:39 PDT
Apologies for the second patch, but I was wondering if we should do something special to handle any case where max iterations is hit. Log it? Use an ASSERT? We could add that to this patch if it's appropriate.
W. James MacLean
Comment 3
2012-04-04 09:44:06 PDT
(In reply to
comment #2
)
> Apologies for the second patch, but I was wondering if we should do something special to handle any case where max iterations is hit. Log it? Use an ASSERT? We could add that to this patch if it's appropriate.
Just to add some data ... I've run informal tests, and found we routinely get to 17 iterations, although I've never seen higher than that. But in theory it could go at least a little higher.
James Robinson
Comment 4
2012-04-04 13:16:27 PDT
Is there anything special we should do if it doesn't converge? I would say just take whatever value we get.
W. James MacLean
Comment 5
2012-04-05 05:42:25 PDT
(In reply to
comment #4
)
> Is there anything special we should do if it doesn't converge? I would say just take whatever value we get.
That's probably the best we can hope for. Even if it wasn't fully convereged, it ought to be very close I would think. We'll leave it as is then.
WebKit Review Bot
Comment 6
2012-04-05 06:49:28 PDT
Comment on
attachment 135596
[details]
Patch Clearing flags on attachment: 135596 Committed
r113319
: <
http://trac.webkit.org/changeset/113319
>
WebKit Review Bot
Comment 7
2012-04-05 06:49:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug