Adjust max bisection search iterations for TouchpadFlingGestureCurve. https://bugs.webkit.org/show_bug.cgi?id=83166

Reviewed by James Robinson.

Covered by existing tests.

* platform/TouchpadFlingPlatformGestureCurve.cpp:
(WebCore):


Canonical link: https://commits.webkit.org/100655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113319 268f45cc-cd09-0410-ab3c-d52691b4dbfc